2002-12-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/wdt.h: fix typo.

2002-12-17  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* include/avr/iom169.h: Revert premature patch (from Joerg's work in
	progress).

2002-12-16  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* doc/api/faq.dox: Fix broken link where doxygen tried to xref to 
	"main()" when it should not.

2002-12-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/faq.dox: add entry about effect of -Ox.

2002-12-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/wdt.h: Document, invent symbolic timeout constants.
	* doc/TODO: delete wdt.h.

2002-12-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/TODO: update per mailing list discussion.

2002-12-14  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/iom169.h: fix typo.

2002-12-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/main_page.dox: fix typo, remove non-existent tiny10.

2002-12-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/math.h: document isnan() and isinf().

2002-12-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/*: add CVS Ids (where missing).

2002-12-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libc/string/strstr.S: complete fixed rewrite, thanks to
		Philip Soeberg.

2002-12-11  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libm/fplib/asin.S: complete rewrite, kudos to Reiner Patommel.

2002-12-09  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.

2002-12-09  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libm/fplib/isinfnan.S: micro-optimize.

2002-12-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libm/fplib/sqrt.S: move the detection of 0 earlier [Bug #1837].

2002-12-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* libc/stdio/vfprintf.c: recognize Inf and NaN.

2002-12-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/math.h: add isinf()/isnan().